<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_all_card"
            android:title="@string/draw_menu_first" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/draw_menu_second" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/draw_menu_third" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_dui"
            android:title="@string/draw_menu_forth" />
    </group>

    <item android:title="更多">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_refresh"
                android:title="@string/draw_menu_five" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/draw_menu_six" />
        </menu>
    </item>

</menu>
